--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 											<a href="http://outreach.mcmaster.ca/tools/ColourPicker.html"class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ShapeCreate.png" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/ShapeCreate.png" alt="" /></a>
 											<h3 class="major">SHAPE CREATOR</h3>
 											<p>Another HTML app made using Elm that was designed to aid new programmers in creating shapes in Elm. The user can click  on different specifications and the program will display the shape as well as the code needed to create that shape in Elm.</p>
 											<a href="http://www.cas.mcmaster.ca/~anand/ShapeCreate2.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Maze.png" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/Maze.png" alt="" /></a>
 											<h3 class="major">MAZE</h3>
 											<p>This was the final project for my first year Python course. Its a program that generates a unique size N x N maze, and finds the shortest path between randomly generated start and finish.</p>
 											<!--<a href="#" class="special">Learn more</a>
