--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<p>The following are a list of some  projects from my courses, and my job as a programming instructor.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/ColourPicker.png" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/ColourPicker.png" alt="" /></a>
 											<h3 class="major">COLOUR PICKER</h3>
 											<p>This app was created using Elm, a new functional  programming language. Elm utilizes the power of functional programming to create browser-based graphical user interfaces. This app is mouse interactive and generates code that helps users create custom colours for their programs.</p>
 											<a href="http://outreach.mcmaster.ca/tools/ColourPicker.html"class="special">Learn more</a>
