--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
 									<p>The following are a list of some  projects from my courses, and my job as a programming instructor.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image featured"><img src="images/ColourPicker.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/ColourPicker.png" alt="" /></a>
 											<h3 class="major">COLOUR PICKER</h3>
 											<p>This app was created using Elm, a new functional  programming language. Elm utilizes the power of functional programming to create browser-based graphical user interfaces. This app is mouse interactive and generates code that helps users create custom colours for their programs.</p>
 											<a href="http://outreach.mcmaster.ca/tools/ColourPicker.html"class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image featured"><img src="images/ShapeCreate.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/ShapeCreate.png" alt="" /></a>
 											<h3 class="major">SHAPE CREATOR</h3>
 											<p>Another HTML app made using Elm that was designed to aid new programmers in creating shapes in Elm. The user can click  on different specifications and the program will display the shape as well as the code needed to create that shape in Elm.</p>
 											<a href="http://www.cas.mcmaster.ca/~anand/ShapeCreate2.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image featured"><img src="images/Maze.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/Maze.png" alt="" /></a>
 											<h3 class="major">MAZE</h3>
 											<p>This was the final project for my first year Python course. Its a program that generates a unique size N x N maze, and finds the shortest path between randomly generated start and finish.</p>
 											<!--<a href="#" class="special">Learn more</a>
