--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 											<a href="https://github.com/levin-noro/Maze" class="image"><img src="images/Maze.PNG" alt="" /></a>
 											<h3 class="major">MAZE</h3>
 											<p>This was the final project for my first year Python course. Its a program that generates a unique size N x N maze, and finds the shortest path between randomly generated start and finish.</p>
-											<!--<a href="#" class="special">Learn more</a>
-											-->
+											<a href="https://github.com/levin-noro/Maze" class="special">Learn more</a>
+											
 										<!--	
 										</article>
 										<article>
