--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <li class="fa-github"><a href="https://github.com/levin-noro">github.com/levin-noro</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Levin Noronha. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Levin Noronha. All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
