--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a href="#" class="image"><img src="images/head_shot.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Welcome</h2>
-										<p>I'm Levin Noronha, and this is my personal website. I'm a second year Computer Science student at McMaster University with a passion for efficient programming.  </p>
+										<p>I'm Levin Noronha, and this is my personal website. I'm a third year Computer Science student at McMaster University with a passion for efficient programming.  </p>
 										<!-- 
 										<a href="#" class="special">Learn more</a>
 										 -->
@@ -75,8 +75,18 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">PROJECTS</h2>
-									<p>The following are a list of some  projects from my courses, and my job as a programming instructor.</p>
 									<section class="features">
+										<article>
+											<a href="images/ElmPlayground.PNG" class="image"><img src="images/ElmPlayground.PNG" alt="" /></a>
+											<h3 class="major">ELM PLAYGROUND</h3>
+											<p>Made using Swift, this is an educational iPad app that lets students write code in the Elm language to create graphics. For this project, I used enums and structs to capture all the types and production rules of Elm. In order show types, my app features syntax highlighting. Also, to eliminate syntax errors, the app prohibits typing and only allows modification of the code via tapping and selecting options that delete, insert, or swap with other syntactically correct options. I’m creating this app for McMaster's Computing and Software Outreach program, and it will be used as a tool to teaching programming to elementary school students.</p>
+										</article>
+										<article>
+											<a href="images/CityFinder.png" class="image"><img src="images/CityFinder.png" alt="" /></a>
+											<h3 class="major">CITY FINDER</h3>
+											<p>In a team of 5, developed a Java web app running on a Tomcat Apache server that lets users find living quality scores about any city in Canada. This app makes use of a large open government data set and uses search, sort, and graph algorithms, which I wrote, on this data set to provide the user with useful information.
+											</p>
+										</article>
 										<article>
 											<a href="http://outreach.mcmaster.ca/tools/ColourPicker.html" class="image"><img src="images/ColourPicker.PNG" alt="" /></a>
 											<h3 class="major">COLOUR PICKER</h3>
@@ -95,8 +105,8 @@
 											<p>This was the final project for my first year Python course. Its a program that generates a unique size N x N maze, and finds the shortest path between randomly generated start and finish.</p>
 											<a href="https://github.com/levin-noro/Maze" class="special">Learn more</a>
 											
-										<!--	
 										</article>
+										<!--	
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Fusce consequat</h3>
@@ -152,7 +162,6 @@
 								<!--
 								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 							-->
-								<li class="fa-facebook"><a href="https://www.facebook.com/levin.noronha.3">facebook.com/levin.noronha.3</a></li>
 								<li class="fa-linkedin"><a href="https://ca.linkedin.com/in/levinnoronha">ca.linkedin.com/in/levinnoronha</a></li>
                                 <li class="fa-github"><a href="https://github.com/levin-noro">github.com/levin-noro</a></li>
 							</ul>
