--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<h2 class="major">PROJECTS</h2>
 									<section class="features">
 										<article>
-											<a href="images/ElmPlayground.PNG" class="image"><img src="images/ElmPlayground.PNG" alt="" /></a>
+											<a href="images/ElmPlayground.png" class="image"><img src="images/ElmPlayground.png" alt="" /></a>
 											<h3 class="major">ELM PLAYGROUND</h3>
 											<p>Made using Swift, this is an educational iPad app that lets students write code in the Elm language to create graphics. For this project, I used enums and structs to capture all the types and production rules of Elm. In order show types, my app features syntax highlighting. Also, to eliminate syntax errors, the app prohibits typing and only allows modification of the code via tapping and selecting options that delete, insert, or swap with other syntactically correct options. I’m creating this app for McMaster's Computing and Software Outreach program, and it will be used as a tool to teaching programming to elementary school students.</p>
 										</article>
